fix:visibility of buttons map height

--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -248,7 +248,7 @@
 
       .mapContainer {
         width: 100%;
-        height: 200px;
+        // height: 200px;
       }
 
       .buttons {
